8260497: Shenandoah: Improve SATB flushing

Reviewed-by: shade, zgu